2001-11-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (BARE_APPEND): New variable specifying the filename
	to append the recipient address of outgoing messages when <action>
	is 'bare=append'.

	* FilterParser.py: Document bare=append <action>.

	* Defaults.py (ACTION_OUTGOING): New variable replacing
	COOKIE_TYPE to specify the default tag on outgoing messages.

	(ACTION_INCOMING): New variable to specify how incoming messages
	are disposed of by default.

2001-11-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDARC): Exit(75) to force a deferral if any
	exceptions arise when running execfile on TMDARC.  This is
	necessary for non-qmail MTAs which bounce rather than defer by
	default.

	* Util.py (findmatch): addrs should now be a list to iterate over.
	
	* FilterParser.py: Add support for incoming filter files.

	* Defaults.py: Remove: BOUNCE_BLACKLIST_CC, BOUNCE_CONFIRM_CC,
	BOUNCE_REVOKED_CC BLACKLIST, WHITELIST, SACRED_FILE, REVOKED_FILE,
	BARE_FILE, DATED_FILE, EXP_FILE, EXT_FILE, KEYWORD_FILE,
	SENDER_FILE, WHITELIST_TO_BARE, WHITELIST_AUTO_APPEND

	Add: FILTER_DROP_CC, CONFIRM_CC, FILTER_BOUNCE_CC,
	FILTER_INCOMING, FILTER_OUTGOING, CONFIRM_APPEND

2001-11-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FilterParser.py (FilterParser.firstmatch): Catch the TypeError
	exception which is returned by Python 1.x instead of
	AttributeError when string.split is run on None.

	* Defaults.py (FILTER_INCOMING): New variable specifying the
	location of the 'incoming' filter file.

	* FilterParser.py: Document outgoing <action> aliases: 'as' and
	'explicit' for exp, 'extension' for ext, and 'keyword' for kw.

2001-11-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (FILTER_OUTGOING): New variable specifying the
	location of the 'outgoing' filter file.

	* FilterParser.py: New file implementing the parser for TMDA
	filter files.
