@@ -32,7 +32,10 @@ def gethostname():
                os.environ.get('MAILHOST')
     if not hostname:
         import socket
-        hostname = socket.gethostbyaddr(socket.gethostname())[0]
+        try:
+            hostname = socket.getfqdn() # Python2 only
+        except AttributeError:
+            hostname = socket.gethostbyaddr(socket.gethostname())[0]
     return hostname
 
 
