@@ -1,3 +1,9 @@
+2001-11-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Util.py (gethostname): socket module was not returning the FQDN
+	on Solaris.  So now we at least attempt to first use
+	socket.getfqdn() which does work on Solaris, but only on Python2.
+	
 2001-11-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Defaults.py (BARE_APPEND): New variable specifying the filename
